--- a/MigrationService/Views/Migrants/Details.cshtml
+++ b/MigrationService/Views/Migrants/Details.cshtml
@@ -1,22 +1,76 @@
 ﻿@model MigrationService.Models.Migrant
 
-<h2>Информация о мигранте</h2>
-<dl class="row">
-    <dt class="col-sm-2">Имя</dt>
-    <dd class="col-sm-10">@Model.FullName</dd>
+<div class="container mt-4">
+    <div class="row">
+        <div class="col-md-8 offset-md-2">
+            <div class="card">
+                <div class="card-header">
+                    <h2 class="card-title mb-0">Информация о мигранте</h2>
+                </div>
+                <div class="card-body">
+                    <div class="row mb-4">
+                        <div class="col-md-6">
+                            <dl class="row">
+                                <dt class="col-sm-4">Имя</dt>
+                                <dd class="col-sm-8">@Model.FullName</dd>
 
-    <dt class="col-sm-2">Паспорт</dt>
-    <dd class="col-sm-10">@Model.PassportNumber</dd>
+                                <dt class="col-sm-4">Паспорт</dt>
+                                <dd class="col-sm-8">@Model.PassportNumber</dd>
 
-    <dt class="col-sm-2">Дата рождения</dt>
-    <dd class="col-sm-10">@Model.BirthDate?.ToShortDateString()</dd>
+                                <dt class="col-sm-4">Дата рождения</dt>
+                                <dd class="col-sm-8">@Model.BirthDate?.ToShortDateString()</dd>
+                            </dl>
+                        </div>
+                        <div class="col-md-6">
+                            <dl class="row">
+                                <dt class="col-sm-4">Адрес</dt>
+                                <dd class="col-sm-8">@Model.Address</dd>
 
-    <dt class="col-sm-2">Адрес</dt>
-    <dd class="col-sm-10">@Model.Address</dd>
+                                <dt class="col-sm-4">Страна</dt>
+                                <dd class="col-sm-8">@Model.Country?.CountryName</dd>
+                            </dl>
+                        </div>
+                    </div>
 
-    <dt class="col-sm-2">Страна</dt>
-    <dd class="col-sm-10">@Model.Country?.CountryName</dd>
-</dl>
-
-<a asp-action="Edit" asp-route-id="@Model.MigrantID" class="btn btn-primary">Редактировать</a>
-<a asp-action="Index" class="btn btn-secondary">Назад</a>
+                    <div class="row">
+                        <div class="col-12">
+                            <h4 class="mb-3">Языки</h4>
+                            @if (Model.MigrantLanguages != null && Model.MigrantLanguages.Any())
+                            {
+                                <div class="table-responsive">
+                                    <table class="table table-sm table-bordered">
+                                        <thead>
+                                            <tr>
+                                                <th>Язык</th>
+                                                <th>Уровень владения</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            @foreach (var lang in Model.MigrantLanguages)
+                                            {
+                                                <tr>
+                                                    <td>@lang.Language?.LanguageName</td>
+                                                    <td>@lang.ProficiencyLevel</td>
+                                                </tr>
+                                            }
+                                        </tbody>
+                                    </table>
+                                </div>
+                            }
+                            else
+                            {
+                                <p class="text-muted">Языки не указаны</p>
+                            }
+                        </div>
+                    </div>
+                </div>
+                <div class="card-footer">
+                    <div class="btn-group">
+                        <a asp-action="Edit" asp-route-id="@Model.MigrantID" class="btn btn-primary">Редактировать</a>
+                        <a asp-action="Index" class="btn btn-secondary">Назад</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
