--- a/MigrationService/Views/Applications/Edit.cshtml
+++ b/MigrationService/Views/Applications/Edit.cshtml
@@ -65,8 +65,7 @@
                         </div>
                         <div class="form-group mb-3">
                             <label for="statusComment" class="control-label">Status Comment (Optional)</label>
-                            <textarea id="statusComment" name="statusComment" class="form-control" rows="3" placeholder="Enter a comment about the status change (optional)"></textarea>
-                            <input type="hidden" name="statusComment" value="" />
+                            <textarea id="statusComment" name="statusComment" class="form-control" rows="3" placeholder="Enter your comment about the status change (optional)"></textarea>
                         </div>
                     </div>
                 </div>
