--- a/MigrationService/Views/Shared/_Layout.cshtml
+++ b/MigrationService/Views/Shared/_Layout.cshtml
@@ -30,6 +30,7 @@
                                 <li><a class="dropdown-item" asp-controller="Applications" asp-action="Index">Applications</a></li>
                                 <li><a class="dropdown-item" asp-controller="Officers" asp-action="Index">Officers</a></li>
                                 <li><hr class="dropdown-divider"></li>
+                                <li><a class="dropdown-item" asp-controller="Documents" asp-action="Index">Documents</a></li>
                                 <li><a class="dropdown-item" asp-controller="Countries" asp-action="Index">Countries</a></li>
                                 <li><a class="dropdown-item" asp-controller="Languages" asp-action="Index">Languages</a></li>
                             </ul>
