--- a/MigrationService/Views/Migrants/Details.cshtml
+++ b/MigrationService/Views/Migrants/Details.cshtml
@@ -17,6 +17,12 @@
                                 <dt class="col-sm-4">Паспорт</dt>
                                 <dd class="col-sm-8">@Model.PassportNumber</dd>
 
+                                <dt class="col-sm-4">Gender</dt>
+                                <dd class="col-sm-8">@Model.Gender</dd>
+
+                                <dt class="col-sm-4">Phone Number</dt>
+                                <dd class="col-sm-8">@Model.PhoneNumber</dd>
+
                                 <dt class="col-sm-4">Дата рождения</dt>
                                 <dd class="col-sm-8">@Model.BirthDate?.ToShortDateString()</dd>
                             </dl>
