--- a/MigrationService/Views/Migrants/Edit.cshtml
+++ b/MigrationService/Views/Migrants/Edit.cshtml
@@ -26,6 +26,22 @@
             </div>
 
             <div class="form-group mb-3">
+                <label asp-for="Gender" class="form-label">Gender</label>
+                <select asp-for="Gender" class="form-select">
+                    <option value="">-- Select Gender --</option>
+                    <option value="Male">Male</option>
+                    <option value="Female">Female</option>
+                </select>
+                <span asp-validation-for="Gender" class="text-danger"></span>
+            </div>
+
+            <div class="form-group mb-3">
+                <label asp-for="PhoneNumber" class="form-label">Phone Number</label>
+                <input asp-for="PhoneNumber" class="form-control" type="tel" />
+                <span asp-validation-for="PhoneNumber" class="text-danger"></span>
+            </div>
+
+            <div class="form-group mb-3">
                 <label asp-for="CountryID" class="form-label">Страна</label>
                 <select asp-for="CountryID" class="form-control" asp-items="ViewBag.CountryList">
                     <option value="">-- выберите страну --</option>
